package NYT;

////////////////////////////////////////////////////////////////////////////////

message TMsgKey
{
    repeated bytes Key = 1;
}

message TMsgRange
{
    required bytes Begin = 1;
    required bytes End = 2;
}

message TMsgKeyRange
{
    required TMsgKey Begin = 1;
    required TMsgKey End = 2;
}

message TMsgChannel
{
    repeated bytes Columns = 1;
    repeated TMsgRange Ranges = 2;
}

message TMsgBlock
{
    required uint64 Offset = 1;
    required uint32 Size = 2;
    required uint32 LastRowIndex = 3;
}

message TMsgChunkChannel
{
    required TMsgChannel Channel = 1;
    repeated TMsgBlock Blocks = 3;
}

message TMsgChunkHeader
{
    required uint32 Version = 1;
    optional uint64 RowCount = 2;
    repeated TMsgChunkChannel Channels = 3;
}

////////////////////////////////////////////////////////////////////////////////
